--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="loading-screen">
+      <div class="loading-spinner"></div>
+      <p>Loading...</p>
+    </div>
+    <div class="error-screen">
+      <h1>Error</h1>
+      <p>An error occurred while loading the application.</p>
+    </div>
+  </app-root>
 </body>
 </html>
